--- a/GouGou-Live/Classes/Login/Controllers/验证码登录/CodeLoginViewController.xib
+++ b/GouGou-Live/Classes/Login/Controllers/验证码登录/CodeLoginViewController.xib
@@ -7,7 +7,10 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CodeLoginViewController">
             <connections>
-                <outlet property="regisePhoneNumber" destination="Bbb-wj-mCJ" id="uj1-bH-Knh"/>
+                <outlet property="phoneNumber" destination="Bbb-wj-mCJ" id="GnR-Bc-pPo"/>
+                <outlet property="psdNumber" destination="1MZ-51-lpe" id="cQl-Nk-96A"/>
+                <outlet property="sendCode" destination="Yhv-W8-FlL" id="WQe-72-LdE"/>
+                <outlet property="sureBtn" destination="znJ-No-jcj" id="vRt-VV-bPh"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,7 +19,7 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="手机icon" translatesAutoresizingMaskIntoConstraints="NO" id="JU6-bl-0Ko">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconfont-dianhua" translatesAutoresizingMaskIntoConstraints="NO" id="JU6-bl-0Ko">
                     <rect key="frame" x="10" y="106" width="18" height="18"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x59-FO-T2a">
@@ -33,16 +36,16 @@
                         <constraint firstAttribute="height" constant="30" id="qB2-m5-b16"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     <connections>
-                        <action selector="phoneTextfieldEditing:" destination="-1" eventType="editingDidEnd" id="UbA-Si-7gV"/>
+                        <action selector="phoneTextfieldEditing:" destination="-1" eventType="editingDidEnd" id="xAw-m8-EHa"/>
                     </connections>
                 </textField>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="验证码蓝" translatesAutoresizingMaskIntoConstraints="NO" id="3yF-MP-fyQ">
-                    <rect key="frame" x="13" y="156" width="16" height="20"/>
+                    <rect key="frame" x="13" y="161" width="16" height="20"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdo-V5-vfQ">
-                    <rect key="frame" x="39" y="151" width="1" height="30"/>
+                    <rect key="frame" x="39" y="156" width="1" height="30"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="1" id="9F8-at-0tR"/>
@@ -50,60 +53,98 @@
                     </constraints>
                 </view>
                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入验证码" textAlignment="natural" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="1MZ-51-lpe">
-                    <rect key="frame" x="50" y="151" width="264" height="30"/>
+                    <rect key="frame" x="50" y="156" width="264" height="30"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="30" id="u0Y-wf-5QG"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                    <textInputTraits key="textInputTraits"/>
+                    <textInputTraits key="textInputTraits" keyboardType="numbersAndPunctuation"/>
                     <connections>
                         <action selector="codeTextFieldEditing:" destination="-1" eventType="editingDidEnd" id="EQB-vj-u3F"/>
                     </connections>
                 </textField>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhv-W8-FlL">
-                    <rect key="frame" x="324" y="152" width="80" height="28"/>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yhv-W8-FlL">
+                    <rect key="frame" x="324" y="157" width="80" height="29"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                     <state key="normal" title="获取验证码">
                         <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="10"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="clickGetCodeBtnAction:" destination="-1" eventType="touchUpInside" id="adD-1y-EgG"/>
                     </connections>
                 </button>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cI0-cN-meT">
-                    <rect key="frame" x="10" y="140" width="394" height="1"/>
+                    <rect key="frame" x="10" y="145" width="394" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="lJu-j3-UlF"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ePq-Pd-ej7">
-                    <rect key="frame" x="10" y="190" width="394" height="1"/>
+                    <rect key="frame" x="10" y="196" width="394" height="1"/>
                     <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="1" id="TcI-ZL-g3g"/>
                     </constraints>
                 </view>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="温馨提示：未注册**的手机号，登录时将自动注册且代表您以经同意《用户服务协议》" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Heb-nR-3QR">
-                    <rect key="frame" x="50" y="201" width="314" height="27"/>
+                    <rect key="frame" x="50" y="207" width="314" height="27"/>
                     <fontDescription key="fontDescription" type="system" pointSize="11"/>
                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="znJ-No-jcj">
-                    <rect key="frame" x="50" y="258" width="314" height="40"/>
+                    <rect key="frame" x="50" y="264" width="314" height="40"/>
                     <color key="backgroundColor" red="0.59999999999999998" green="0.80000000000000004" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="40" id="KMl-3K-JDI"/>
                     </constraints>
-                    <state key="normal" title="确认"/>
+                    <state key="normal" title="确认">
+                        <color key="titleColor" red="0.99607843137254903" green="0.99607843137254903" blue="0.99607843137254903" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                            <integer key="value" value="5"/>
+                        </userDefinedRuntimeAttribute>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                    </userDefinedRuntimeAttributes>
                     <connections>
                         <action selector="chickSureBtnAction:" destination="-1" eventType="touchUpInside" id="6oe-4W-at0"/>
                     </connections>
                 </button>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="我已阅读并同意" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kfe-qk-DH1">
+                    <rect key="frame" x="80" y="327" width="98" height="17"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <color key="textColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bbu-JQ-sPE">
+                    <rect key="frame" x="178" y="320" width="112" height="29"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                    <state key="normal" title="《用户协议链接》">
+                        <color key="titleColor" red="0.59999999999999998" green="0.59999999999999998" blue="0.59999999999999998" alpha="1" colorSpace="calibratedRGB"/>
+                    </state>
+                    <connections>
+                        <action selector="clickProtocolBtnAction:" destination="-1" eventType="touchUpInside" id="pUA-6b-vsX"/>
+                    </connections>
+                </button>
+                <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OTB-Va-iSD">
+                    <rect key="frame" x="50" y="324" width="20" height="22"/>
+                    <state key="normal" image="圆角矩形-9"/>
+                    <state key="selected" image="对号协议"/>
+                    <connections>
+                        <action selector="clickReadBtn:" destination="-1" eventType="touchUpInside" id="wca-w2-mgb"/>
+                    </connections>
+                </button>
             </subviews>
-            <color key="backgroundColor" white="0.91388260690789469" alpha="1" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
                 <constraint firstItem="Yhv-W8-FlL" firstAttribute="centerY" secondItem="1MZ-51-lpe" secondAttribute="centerY" id="1tU-Vj-zOb"/>
                 <constraint firstItem="znJ-No-jcj" firstAttribute="leading" secondItem="Heb-nR-3QR" secondAttribute="leading" id="2EO-dn-1sP"/>
@@ -111,37 +152,45 @@
                 <constraint firstItem="znJ-No-jcj" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="7iS-a6-pKa"/>
                 <constraint firstItem="hdo-V5-vfQ" firstAttribute="leading" secondItem="3yF-MP-fyQ" secondAttribute="trailing" constant="10" id="89G-n5-J2o"/>
                 <constraint firstAttribute="trailing" secondItem="cI0-cN-meT" secondAttribute="trailing" constant="10" id="8nX-gu-vL2"/>
+                <constraint firstItem="bbu-JQ-sPE" firstAttribute="centerY" secondItem="OTB-Va-iSD" secondAttribute="centerY" id="9QP-6b-1Cs"/>
                 <constraint firstItem="hdo-V5-vfQ" firstAttribute="centerY" secondItem="1MZ-51-lpe" secondAttribute="centerY" id="ARK-tb-Z6n"/>
                 <constraint firstItem="Heb-nR-3QR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="B3w-MS-Bei"/>
                 <constraint firstAttribute="trailing" secondItem="1MZ-51-lpe" secondAttribute="trailing" constant="100" id="BXW-d3-1q6"/>
                 <constraint firstItem="Bbb-wj-mCJ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="20" id="C1i-xm-QUS"/>
                 <constraint firstAttribute="trailing" secondItem="ePq-Pd-ej7" secondAttribute="trailing" constant="10" id="CAe-bv-w6m"/>
+                <constraint firstItem="OTB-Va-iSD" firstAttribute="top" secondItem="znJ-No-jcj" secondAttribute="bottom" constant="20" id="Cnl-yD-Qbq"/>
                 <constraint firstItem="1MZ-51-lpe" firstAttribute="leading" secondItem="hdo-V5-vfQ" secondAttribute="trailing" constant="10" id="DeA-65-VjP"/>
                 <constraint firstItem="Bbb-wj-mCJ" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="Ia5-BH-xnf"/>
                 <constraint firstItem="cI0-cN-meT" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="Jj3-Hl-mQG"/>
                 <constraint firstAttribute="trailing" secondItem="Bbb-wj-mCJ" secondAttribute="trailing" constant="10" id="L7g-Sf-RgU"/>
+                <constraint firstItem="OTB-Va-iSD" firstAttribute="leading" secondItem="znJ-No-jcj" secondAttribute="leading" id="Lnm-6o-Cfg"/>
                 <constraint firstItem="JU6-bl-0Ko" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="NCI-uL-MgO"/>
-                <constraint firstItem="cI0-cN-meT" firstAttribute="top" secondItem="Bbb-wj-mCJ" secondAttribute="bottom" constant="10" id="PDV-lS-agu"/>
+                <constraint firstItem="cI0-cN-meT" firstAttribute="top" secondItem="Bbb-wj-mCJ" secondAttribute="bottom" constant="15" id="PDV-lS-agu"/>
+                <constraint firstItem="Kfe-qk-DH1" firstAttribute="centerY" secondItem="OTB-Va-iSD" secondAttribute="centerY" id="PHy-Pf-FiB"/>
                 <constraint firstItem="x59-FO-T2a" firstAttribute="centerY" secondItem="Bbb-wj-mCJ" secondAttribute="centerY" id="YNG-PY-av8"/>
                 <constraint firstItem="Heb-nR-3QR" firstAttribute="top" secondItem="ePq-Pd-ej7" secondAttribute="bottom" constant="10" id="b1B-B9-6Cn"/>
                 <constraint firstItem="1MZ-51-lpe" firstAttribute="top" secondItem="cI0-cN-meT" secondAttribute="bottom" constant="10" id="bzz-nf-YlK"/>
                 <constraint firstItem="Bbb-wj-mCJ" firstAttribute="leading" secondItem="x59-FO-T2a" secondAttribute="trailing" constant="10" id="cRx-8V-K0K"/>
                 <constraint firstItem="Heb-nR-3QR" firstAttribute="leading" secondItem="Bbb-wj-mCJ" secondAttribute="leading" id="d2l-IF-mO2"/>
+                <constraint firstItem="Kfe-qk-DH1" firstAttribute="leading" secondItem="OTB-Va-iSD" secondAttribute="trailing" constant="10" id="eQ5-0H-nPa"/>
                 <constraint firstItem="3yF-MP-fyQ" firstAttribute="centerY" secondItem="1MZ-51-lpe" secondAttribute="centerY" id="eTB-ff-3yj"/>
                 <constraint firstItem="ePq-Pd-ej7" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="10" id="luh-Pz-AWM"/>
                 <constraint firstItem="znJ-No-jcj" firstAttribute="top" secondItem="Heb-nR-3QR" secondAttribute="bottom" constant="30" id="o2X-7s-iRc"/>
                 <constraint firstItem="ePq-Pd-ej7" firstAttribute="top" secondItem="Yhv-W8-FlL" secondAttribute="bottom" constant="10" id="rOA-u6-jMN"/>
                 <constraint firstItem="znJ-No-jcj" firstAttribute="width" secondItem="Heb-nR-3QR" secondAttribute="width" id="sES-ZQ-PUL"/>
+                <constraint firstItem="bbu-JQ-sPE" firstAttribute="leading" secondItem="Kfe-qk-DH1" secondAttribute="trailing" id="sRM-aB-pTN"/>
                 <constraint firstItem="Yhv-W8-FlL" firstAttribute="leading" secondItem="1MZ-51-lpe" secondAttribute="trailing" constant="10" id="xjf-Qq-JJB"/>
                 <constraint firstItem="1MZ-51-lpe" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="-25" id="zQO-P4-0Fu"/>
                 <constraint firstAttribute="trailing" secondItem="Yhv-W8-FlL" secondAttribute="trailing" constant="10" id="zyA-w1-U7e"/>
             </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-            <point key="canvasLocation" x="479" y="87"/>
+            <point key="canvasLocation" x="588" y="38"/>
         </view>
     </objects>
     <resources>
-        <image name="手机icon" width="18" height="18"/>
+        <image name="iconfont-dianhua" width="18" height="18"/>
+        <image name="圆角矩形-9" width="20" height="20"/>
+        <image name="对号协议" width="20" height="20"/>
         <image name="验证码蓝" width="16" height="20"/>
     </resources>
 </document>
